Updated the comments